# Jelly-Drift-Second-Gear

./: .gitattributes  .gitignore  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: auto_comment.yml  issue-labeler.yml  unity-build.yml
Assets/: InfiniteScroll.cs  MainMenuNewsScroll.cs  MountainRoadLow.mat  UWa-Template-Genshin_Low.mat  Ubuntu-Bold Cutout.mat  UniversalRenderPipelineGlobalSettings.asset
Assets/Editor/: Keygen.cs
Assets/Materials/: Blue.mat  Blue_0.mat  Blue_1.mat  Crimson.mat  Crimson_0.mat  Flat_blue.mat  Glass_0.mat  Grass.mat  Grass_1.mat  Gray_0.mat  Gray_2.mat  Ground.002.mat  Ground.mat  Leaves.002.mat  Leaves.mat  Light_red 2.mat  Light_red 3.mat  Material.002.mat  Material.003.mat  Material.004_2.mat  Material.007_2.mat  Material.060.mat  Material_1.mat  Midnight.mat  Midnight_0.mat  MobileWater.mat  Neon Light.mat  OJ.mat  Purple.mat  Rock_2.mat  Shadow_0.mat  The Original.mat  Tofu.mat  Tree.001.mat  TreeLeaves_0.mat  TreeRoot_0.mat  Tree_root.mat  UWa-Template-Genshin_Low.mat  Wood_0.mat  Yellow.mat  (+15 more)
Assets/Models/: Sand.asset  title_env.blend  title_env.blend1  title_env.mtl  tree.blend  tree.blend1  tree.mtl
Assets/Rendering/: DefaultVolumeProfile.asset  URP Asset.asset  UniversalRenderPipelineGlobalSettings.asset
Assets/Resources/: JConsole.prefab  Managers.prefab  (+3 more)
ProjectSettings/: GraphicsSettings.asset  ProjectSettings.asset  QualitySettings.asset  ShaderGraphSettings.asset
UserSettings/: EditorUserSettings.asset  Search.settings
training/: main.py  pyproject.toml
training/configs/: car_trainer.yaml
(+324 files in other folders)
